--- a/eventhub/index.html
+++ b/eventhub/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>EventHub</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+  <header>
+    <h1>EventHub</h1>
+    <nav>
+      <a href="#">Home</a> |
+      <a href="#">Eventos</a> |
+      <a href="#">Sobre</a> |
+      <a href="#">Contato</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Destaques</h2>
+    <p>Confira os principais eventos do mês!</p>
+    <img src="img/evento.jpg" alt="Imagem ilustrativa de evento">
+  </main>
+  <footer>
+    © 2025 EventHub. Todos os direitos reservados.
+  </footer>
 </body>
 </html>
