feat: estilo do menu

--- a/eventhub/index.html
+++ b/eventhub/index.html
@@ -6,16 +6,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>EventHub</h1>
-    <nav>
+  <header class="header-container">
+    <h1 class="title">EventHub</h1>
+    <nav class="menu-container">
       <a href="#">Home</a> |
       <a href="#">Eventos</a> |
       <a href="#">Sobre</a> |
       <a href="#">Contato</a>
     </nav>
   </header>
-  <main>
+  <main class="main">
     <h2>Destaques</h2>
     <p>Confira os principais eventos do mês!</p>
     <img src="img/evento.jpg" alt="Imagem ilustrativa de evento">
