style: modificação da main e footer

--- a/eventhub/index.html
+++ b/eventhub/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <title>EventHub</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header class="header-container">
     <h1 class="title">EventHub</h1>
@@ -18,10 +20,11 @@
   <main class="main">
     <h2>Destaques</h2>
     <p>Confira os principais eventos do mês!</p>
-    <img src="img/evento.jpg" alt="Imagem ilustrativa de evento">
+    <img src="img/event.png" alt="Imagem ilustrativa de evento">
   </main>
-  <footer>
+  <footer class="footer">
     © 2025 EventHub. Todos os direitos reservados.
   </footer>
 </body>
+
 </html>
